RESOLVED FIXED214930
[macOS] Inspector bar in Mail compose shows incorrect text alignment style for ranged selections
https://bugs.webkit.org/show_bug.cgi?id=214930
Summary [macOS] Inspector bar in Mail compose shows incorrect text alignment style fo...
Wenson Hsieh
Reported 2020-07-29 12:27:51 PDT
Attachments
Patch (20.21 KB, patch)
2020-07-29 12:49 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-07-29 12:49:09 PDT
EWS
Comment 2 2020-07-29 14:50:51 PDT
Committed r265059: <https://trac.webkit.org/changeset/265059> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405487 [details].
Note You need to log in before you can comment on or make changes to this bug.